@@ -1,8 +1,8 @@
 #!/bin/sh
 # $Id: sudowrapper.sh,v 1.11 2005/10/24 13:03:30 capitn Exp $
 
-OARDIR=/home/capitn/oar/Tools/oarsh
-OARUSER=oar
+OARDIR=
+OARUSER=
 
 export PERL5LIB=$OARDIR:$PERL5LIB
 export OARDIR
